# metamodule-cella

./: .gitmodules  CMakeLists.txt  plugin-mm.json
metamodule-plugins/: Cella.mmplugin
